Fix for body overflow and hero cards component head margins and paddings

--- a/src/app/hero-cards/hero-cards.component.scss
+++ b/src/app/hero-cards/hero-cards.component.scss
@@ -10,7 +10,8 @@ a {
 
 
 .header {
-  padding: 20px 0 20px 20px;
+  padding: 20px 0 0 0;
+  margin: 0 20px;
   color: $white;
 
   .title {
